docs/core/v0.19/_sources/reference/tmlt/core/transformations/spark_transformations/filter/index.rst.txt



*************
filter
*************

.. py:module:: tmlt.core.transformations.spark_transformations.filter

.. autoapi-nested-parse::

   Transformations for filtering Spark DataFrames.

   See `the architecture overview <https://docs.tmlt.dev/core/latest/topic-guides/architecture.html>`_
   for more information on transformations.











Classes
=======

.. list-table::

   * - :class:`.Filter`
     - Keeps only selected rows in a Spark DataFrame using an expression.

   
.. py:class:: Filter(domain, metric, filter_expr)

   Bases: :class:`tmlt.core.transformations.base.Transformation`

   Keeps only selected rows in a Spark DataFrame using an expression.

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from tmlt.core.domains.spark_domains import SparkStringColumnDescriptor
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a2", "a3", "a3"],
       ...             "B": ["b1", "b1", "b2", "b2"],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A   B
   0  a1  b1
   1  a2  b1
   2  a3  b2
   3  a3  b2
   >>> # Create the transformation
   >>> filter_transformation = Filter(
   ...     domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "B": SparkStringColumnDescriptor(),
   ...         }
   ...     ),
   ...     metric=SymmetricDifference(),
   ...     filter_expr="A = 'a1' or B = 'b2'",
   ... )
   >>> # Apply transformation to data
   >>> filtered_spark_dataframe = filter_transformation(spark_dataframe)
   >>> print_sdf(filtered_spark_dataframe)
       A   B
   0  a1  b1
   1  a3  b2
   2  a3  b2

   Transformation Contract:
       * Input domain - :class:`~.SparkDataFrameDomain`
       * Output domain - :class:`~.SparkDataFrameDomain` (matches input domain)
       * Input metric - :class:`~.SymmetricDifference` or :class:`~.IfGroupedBy`
       * Output metric - :class:`~.SymmetricDifference` or :class:`~.IfGroupedBy`
         (matches input metric)

       >>> filter_transformation.input_domain
       SparkDataFrameDomain(schema={'A': SparkStringColumnDescriptor(allow_null=False), 'B': SparkStringColumnDescriptor(allow_null=False)})
       >>> filter_transformation.output_domain
       SparkDataFrameDomain(schema={'A': SparkStringColumnDescriptor(allow_null=False), 'B': SparkStringColumnDescriptor(allow_null=False)})
       >>> filter_transformation.input_metric
       SymmetricDifference()
       >>> filter_transformation.output_metric
       SymmetricDifference()

       Stability Guarantee:
           :class:`~.Filter`'s :meth:`~.stability_function` is the identity function.

           >>> filter_transformation.stability_function(1)
           1
           >>> filter_transformation.stability_function(123)
           123






   .. py:property:: filter_expr
      :type: str


      Returns the filter expression.

   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain


      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric


      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain


      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric


      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      See `the architecture overview <https://docs.tmlt.dev/core/latest/topic-guides/architecture.html>`_
      for more information.

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(sdf)

      Returns the filtered DataFrame.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.






